Prevent layout shifting when modal is open

--- a/lxl-web/src/app.css
+++ b/lxl-web/src/app.css
@@ -31,6 +31,7 @@
 	/* Base styles for elements */
 	html {
 		@apply bg-main font-sans text-base text-primary antialiased;
+		scrollbar-gutter: stable;
 	}
 
 	a {
